feat: added analyze endpoint for all data required to do fundamental analysis on a stock
